--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "opusscript": "0.0.7"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "ts-node": "8.6.2",
+    "tslint": "6.0.0",
+    "typescript": "3.8.3"
   },
   "private": true
 }
