--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,8 @@
   // 既存の属性の説明をホバーして表示します。
   // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
+  "configurations": [
+  {
     "type": "node",
     "request": "launch",
     "name": "プログラムの起動",
@@ -11,15 +12,17 @@
       "<node_internals>/**"
     ],
     "program": "${workspaceFolder}/index.js"
-  }]
-}, {
-  "type": "node",
-  "request": "launch",
-  "name": "Launch TypeScript",
-  "preLaunchTask": "Compile TypeScript",
-  "cwd": "${workspaceFolder}",
-  "program": "${file}",
-  "outFiles": [
-    "${workspaceFolder}/build/**/*.js"
-  ]
+  },
+  {
+    "type": "node",
+    "request": "launch",
+    "name": "Launch TypeScript",
+    "preLaunchTask":  "Compile TypeScript",
+    "cwd": "${workspaceFolder}",
+    "program": "${workspaceFolder}/${fileBasenameNoExtension}.js",
+    "outFiles": [
+      "${workspaceFolder}/${ fileBasename}.js"
+    ]
+  }
+]
 }
