--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
+    "@types/node": "^13.7.7",
     "discord.js": "^12.0.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.0.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "n": "^6.3.1",
     "node-cron": "^2.0.3",
     "opusscript": "0.0.7"
   },
