fix vscode runner compile

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,13 +16,21 @@
 // }
 
 {
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
   "version": "2.0.0",
-  "tasks": [{
-    "label": "Compile TypeScript",
-    "type": "typescript",
-    "tsconfig": "tsconfig.json",
-    "problemMatcher": [
-      "$tsc"
-    ],
-  }]
+  "tasks": [
+      {
+          "type": "typescript",
+          "tsconfig": "tsconfig.json",
+          "label": "Compile TypeScript",
+          "problemMatcher": [
+              "$tsc"
+          ],
+          "group": {
+              "kind": "build",
+              "isDefault": true
+          }
+      }
+  ]
 }
