--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "build": "tsc index.ts",
+    "start": "node index.js",
   },
   "engines": {
     "node": "8"
