--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "build": "tsc index.ts",
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "engines": {
     "node": "8"
@@ -16,7 +16,6 @@
     "ffmpeg-static": "^4.0.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "n": "^6.3.1",
     "node-cron": "^2.0.3",
     "opusscript": "0.0.7"
   },
