--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "node-cron": "^2.0.3",
-    "opusscript": "0.0.7"
+    "opusscript": "0.0.7",
+    "typescript": "3.8.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
     "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.8.3"
+    "tslint": "6.0.0"
   },
   "private": true
 }
