--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "build": "tsc index.ts",
-    "start": "node index.js",
+    "build": "tsc",
+    "start": "node index.js"
   },
   "engines": {
     "node": "8"
@@ -11,20 +11,22 @@
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
     "@types/node": "^13.7.7",
+    "@types/node-cron": "^2.0.3",
+    "@types/ws": "^7.2.2",
     "discord.js": "^12.0.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.0.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "n": "^6.3.1",
     "node-cron": "^2.0.3",
-    "opusscript": "0.0.7"
+    "node-opus": "^0.3.3",
+    "opusscript": "0.0.7",
+    "typescript": "3.8.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
     "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.8.3"
+    "tslint": "6.0.0"
   },
   "private": true
 }
