build方法の変更

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
         build:
             context:  .
             dockerfile: ./dockerfile
+        working_dir: /app
         command: npm start
         volumes: 
             - .:/app
